# Real-Time-Onchain-Counter

./: .gitignore  Cargo.toml  DEVELOPMENT_NOTES.md  Dockerfile  README.md  SUBMISSION_FORM.md  compose.yaml  run.bash
contracts/: Cargo.toml
contracts/src/: lib.rs
frontend/: package.json  server.js
frontend/public/: index.html
scripts/: deploy.bat  deploy.sh  run-service.bat  run-service.sh
src/: lib.rs
web/: index.html  package.json
