[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
linera-sdk = "0.15.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
linera-sdk = { version = "0.15.5", features = ["test"] }